@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gaim-smileys/gaim-smileys-20031002.ebuild,v 1.7 2005/12/23 10:05:10 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gaim-smileys/gaim-smileys-20031002.ebuild,v 1.8 2006/05/23 20:32:16 corsair Exp $
 
 IUSE=""
 DESCRIPTION="Snapshot of Available Gaim Smiley Themes"
@@ -37,7 +37,7 @@ SRC_URI="http://www.kingant.net/oscar/gaim/icq.tar.gz
 
 LICENSE="as-is"
 SLOT="0"
-KEYWORDS="alpha amd64 ia64 ppc ~ppc64 sparc x86"
+KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86"
 
 DEPEND=">=net-im/gaim-0.59"
 
