@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gaim-smileys
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gaim-smileys/ChangeLog,v 1.13 2005/12/23 10:05:10 corsair Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gaim-smileys/ChangeLog,v 1.14 2006/05/23 20:32:16 corsair Exp $
+
+  23 May 2006; Markus Rothe <corsair@gentoo.org>
+  gaim-smileys-20031002.ebuild:
+  Stable on ppc64
 
   23 Dec 2005; Markus Rothe <corsair@gentoo.org>
   gaim-smileys-20031002.ebuild:
