@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/commonbox-styles-extra
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/commonbox-styles-extra/ChangeLog,v 1.17 2006/01/17 07:59:01 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/commonbox-styles-extra/ChangeLog,v 1.18 2006/05/23 20:31:40 corsair Exp $
+
+  23 May 2006; Markus Rothe <corsair@gentoo.org>
+  commonbox-styles-extra-0.2-r1.ebuild:
+  Stable on ppc64
 
 *commonbox-styles-extra-0.2-r2 (17 Jan 2006)
 
